[package]
name = "modules"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"

anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }

serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing = "0.1.37"
time = { version = "0.3.25", features = ["macros"] }
